src/objects/csord__Solution__c.object
<CustomObject>
    <description>A grouping object for a set of Subscriptions and other objects within a related group.</description>
    <fields>
        <fullName>Jeopardy_Reason__c</fullName>
        <label>Jeopardy Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Field Support (Contractor)</fullName>
                </value>
                <value>
                    <fullName>Customer Issue</fullName>
                </value>
                <value>
                    <fullName>Rebook</fullName>
                </value>
                <value>
                    <fullName>Network Issue</fullName>
                </value>
                <value>
                    <fullName>Address not found</fullName>
                </value>
                <value>
                    <fullName>Resource not available in time</fullName>
                </value>
                <value>
                    <fullName>Customer has uncleared debts</fullName>
                </value>
                <value>
                    <fullName>Number not owned</fullName>
                </value>
                <value>
                    <fullName>Resource not available</fullName>
                </value>
                <value>
                    <fullName>Wayleave</fullName>
                </value>
                <value>
                    <fullName>Excess Construction Charges</fullName>
                </value>
                <value>
                    <fullName>Site not serviceable</fullName>
                </value>
                <value>
                    <fullName>Cancelled Orders (non-serviceable)</fullName>
                </value>
                <value>
                    <fullName>Cancelled Orders (customer cancelled)</fullName>
                </value>
                <value>
                    <fullName>Provisioning WO Creation Failed</fullName>
                </value>
                <value>
                    <fullName>MiddleWare Timeout</fullName>
                </value>
                <value>
                    <fullName>JIRA Order Creation Failed</fullName>
                </value>
                <value>
                    <fullName>SFDC failure</fullName>
                </value>
                <value>
                    <fullName>Order Cancellation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
</fields>
<fields>
        <fullName>LG_ServiceAction__c</fullName>
        <label>Service Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccessAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to identify whether we can initiate MWLAN Jira flow</description>
        <label>LG_AccessAvailable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_AccountName__c</fullName>
        <description>Displaying the Account Name in Email Templates</description>
        <formula>csord__Order__r.csord__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is created for usage in HTML Templates</inlineHelpText>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Flow__c</fullName>
        <description>Identifier for Jira Automated/manual Flow</description>
        <label>Jira Flow</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ActivationNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If any of the related services requires activation, this field will be set to true</description>
        <label>Activation Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_AddressDetails__c</fullName>
        <description>Stores the detailed installation address for the solution</description>
        <formula>LG_Address__r.LG_FullAddressDetails__c</formula>
        <inlineHelpText>This Field has been created for usage in HTML Email Templates</inlineHelpText>
        <label>Address Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>cscrm__Address__c</referenceTo>
        <relationshipLabel>Solutions</relationshipLabel>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_AnyActiveService__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used as a flag for the Any Active Service custom orchestrator step.</description>
        <label>Any Active Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_AnyNumbersToPort__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any Numbers to Port</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_AppointmentToCancel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appointment to Cancel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_ApproverComments__c</fullName>
        <label>Approver Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LG_Cancellation_Description__c</fullName>
        <label>Cancellation Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_DecompositionCriteria__c</fullName>
        <label>Decomposition Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LG_DecompositionCriteria</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_DependsOnSecondary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is set to true if the Site Service has secondary service for a solution</description>
        <label>LG_DependsOnSecondary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_EarliestInstallDate__c</fullName>
        <label>Earliest Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_EarliestPortingWishDate__c</fullName>
        <label>Earliest porting wish date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_ExistingCama__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to identify if existing CAMA order</description>
        <label>LG_ExistingCama</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_FulfilmentDate__c</fullName>
        <formula>LG_TargetDate__c - 20</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fulfilment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_InflightChange__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Last minute changes from customer which have manageable impact on ongoing fulfilment process</description>
        <inlineHelpText>Check this flag if we need to redirect the process from happy path to Jeopardy / Exception handling after Inflight Change (Appointment / Numbers / Configuration) was captured</inlineHelpText>
        <label>Inflight Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_InstallationNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installation Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_InstallationWishDate__c</fullName>
        <label>Installation Wish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_Integration_Description__c</fullName>
        <label>Integration Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LG_Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Work Order Created</fullName>
                </value>
                <value>
                    <fullName>Request Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Timeout</fullName>
                </value>
                <value>
                    <fullName>SFDC failure</fullName>
                </value>
                <value>
                    <fullName>Order Creation Failed</fullName>
                </value>
                <value>
                    <fullName>Pending Work Order Created</fullName>
                </value>
                <value>
                    <fullName>Billing Integration Timeout</fullName>
                </value>
                <value>
                    <fullName>Middleware Request Failed</fullName>
                </value>
                <value>
                    <fullName>Installation Complete</fullName>
                </value>
                <value>
                    <fullName>Installation Details Missing</fullName>
                </value>
                <value>
                    <fullName>Cancellation Requested</fullName>
                </value>
                <value>
                    <fullName>Install Survey Failed</fullName>
                </value>
                <value>
                    <fullName>Install Survey Successful</fullName>
                </value>
                <value>
                    <fullName>Installation In-Progress</fullName>
                </value>
                <value>
                    <fullName>JIRA Work Order Created</fullName>
                </value>
                <value>
                    <fullName>JIRA Order Creation Failed</fullName>
                </value>
                <value>
                    <fullName>JIRA Initiated Cancellation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_IsFirstDayofNextMonth__c</fullName>
        <formula>TEXT(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsFirstDayofNextMonth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_JeopardyExplanation__c</fullName>
        <label>JeopardyExplanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LG_JeopardyRaisedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who raised the solution to jeopardy</description>
        <label>JeopardyRaisedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_Jeopardy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jeopardy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_Jira_Status__c</fullName>
        <label>Jira Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_LatestPortingWishDate__c</fullName>
        <label>Latest porting wish date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_LogisticsDispatchNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flag on solution obj to show if logistics dispatch is required or not</description>
        <label>LG_LogisticsDispatchNeeded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_NewBilling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, a new billing account must be provisioned.</description>
        <label>New Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_NumbersIncomplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, some of the suborder related Number Block Asset records are incomplete - required fields have no values in it.</description>
        <label>Numbers Incomplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_OldESNNumber__c</fullName>
        <label>Old ESN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_OldSuborder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Suborder</label>
        <referenceTo>csord__Solution__c</referenceTo>
        <relationshipLabel>Solutions</relationshipLabel>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    
    <fields>
        <fullName>LG_OneStepCase_Provisioning_Account_No__c</fullName>
        <formula>(csordtelcoa__Product_Configuration__r.cscfga__Product_Basket__r.LG_BillingAccount__r.LG_BillingAccountNumber__c)+(LG_Address__r.cscrm__Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provisioning Account No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_OpportunityName__c</fullName>
        <formula>csord__Order__r.csordtelcoa__Opportunity__r.Name</formula>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_OrderCancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_OrderChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_PlanningRequired__c</fullName>
        <label>Planning Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Plan &amp; Survey</fullName>
                </value>
                <value>
                    <fullName>Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_ProcessRequestsToCancel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in the Any Number Port Requests Orchestrator Custom step.</description>
        <label>Process Requests to Cancel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_ProvisioningAccountNo__c</fullName>
        <label>Provisioning Account No</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ProvisioningWorkOrder__c</fullName>
        <externalId>true</externalId>
        <label>Provisioning Work Order</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Provisioning_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Provisioning External Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ReSendEmailCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Resend functionality of the Welcome Pack for CSR users</description>
        <label>ReSendEmailCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_RetryInstall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retry Install</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_RetryNumberPort__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retry Number Port</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_RetryPlanning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retry Planning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_RetryProvision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retry Provision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_SecondaryAccessAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field will be marked true in case Site service under the solution object has secondary access available.</description>
        <label>LG_SecondaryAccessAvailable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_SendEmailCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LG_SendEmailCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_SendEmail__c</fullName>
        <formula>&quot;&amp;id=&quot;+Id+
&quot;&amp;QueryId=[Service]a1g0E0000000U4T?pv0=&quot;+Id+ 
&quot;&amp;QueryId=[solution]a1g0E0000000U4O?pv0=&quot;+Id+
&quot;&amp;QueryId=[Account]a1g0E0000000U4Y?pv0=&quot;+Id+
&quot;&amp;QueryId=[asset]a1g0E0000000U4d?pv0=&quot;+Id+ 
&quot;&amp;QueryId=[BillingAcc]a1g0E0000000U4i?pv0={QVar0}&quot;+
&quot;&amp;QueryId=[EmailTemp]a1g0E000000104Q?pv0={QVar4}&quot;+ 
&quot;&amp;QVar0Id=a1g0E0000000U4n?pv0=&quot;+Id+
&quot;&amp;QVar0Format=21000&quot;+
&quot;&amp;QVar1Id=a1g0E0000000U4x?pv0=&quot;+Id+
&quot;&amp;QVar2Id=a1g0E0000000U52?pv0=&quot;+Id+
&quot;&amp;QVar3Id=a1g0E0000000U57?pv0={QVar1}~pv1={QVar2}&quot;+
&quot;&amp;QVar4Id=a1g0E0000000U4s?pv0={QVar3}&quot;+
&quot;&amp;CETId={Qvar4}&quot;+
&quot;&amp;TemplateId=&quot;+$Label.UM_SendWelcomePack+
&quot;&amp;fp0=1&quot; +
&quot;&amp;LG4=1&quot; +
&quot;&amp;QMode=3&quot; +
&quot;&amp;EmailFromID=&quot; + $Label.UM_OrgWideAddressId +
&quot;&amp;EmailToID=&quot;+ csord__Order__r.csordtelcoa__Opportunity__r.LG_PrimaryContact__r.Id +
&quot;&amp;EmailCC=&quot;+ LG_Address__r.LG_TechnicalContact__r.Id +
&quot;&amp;DS7=2&quot;+
&quot;&amp;LG3=1&quot;+
&quot;&amp;DefaultPDF=1&quot; +
&quot;&amp;Culture=de-DE&quot;+
&quot;&amp;LGAttachOption=1&quot;</formula>
        <label>LG_SendEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Suppress_Welcome_Pack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox allows the user to suppress sending the Welcome Pack</description>
        <label>Suppress Welcome Pack</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>LG_Activated_New_Site__c</fullName>
        <label>Activated New Site</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_TargetDate__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
	 <fields>
        <fullName>LG_ServiceCancellableType__c</fullName>
        <label>Service Cancellable Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
     <fields>
        <fullName>LG_Solution_Name__c</fullName>
        <label>Suborder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Termination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_Total_One_off__c</fullName>
        <label>Total One Off Charges</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_Total_Recurring__c</fullName>
        <label>Total Recurring Charges</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_Total_Suborder_Value__c</fullName>
        <label>Total Suborder Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_TriggerPartialBilling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Partial Billing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_Wp_Attachment__c</fullName>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;QueryId=[Service]a1g0E0000000U4T?pv0=&quot;+Id+ 
&quot;&amp;QueryId=[solution]a1g0E0000000U4O?pv0=&quot;+Id+ 
&quot;&amp;QueryId=[Account]a1g0E0000000U4Y?pv0=&quot;+Id+ 
&quot;&amp;QueryId=[asset]a1g0E0000000U4d?pv0=&quot;+Id+ 
&quot;&amp;QueryId=[BillingAcc]a1g0E0000000U4i?pv0={QVar0}&quot;+ 
&quot;&amp;QueryId=[EmailTemp]a1g0E000000104Q?pv0={QVar4}&quot;+ 
&quot;&amp;QVar0Id=a1g0E0000000U4n?pv0=&quot;+Id+ 
&quot;&amp;QVar0Format=21000&quot;+ 
&quot;&amp;QVar1Id=a1g0E0000000U4x?pv0=&quot;+Id+ 
&quot;&amp;QVar2Id=a1g0E0000000U52?pv0=&quot;+Id+ 
&quot;&amp;QVar3Id=a1g0E0000000U57?pv0={QVar1}~pv1={QVar2}&quot;+ 
&quot;&amp;QVar4Id=a1g0E0000000U4s?pv0={QVar3}&quot;+ 
&quot;&amp;templateid=&quot; + $Label.UM_SendWelcomePack + 
&quot;&amp;qmode=Attachments&quot; + 
&quot;&amp;DefaultPDF=1&quot; +
&quot;&amp;Culture=de-DE&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LG_Wp_Attachment</label>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>LG_type_Of_Services__c</fullName>
        <label>Type Of Services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Service__c</fullName>
        <label>services</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Site_Status__c</fullName>
        <label>New Site Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAC__c</fullName>
        <label>PAC</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Activate_Date__c</fullName>
        <formula>LG_TargetDate__c - 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trigger Activate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UM_DeliveryCompletionDate__c</fullName>
        <label>Delivery Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UM_JiraAssigneeName__c</fullName>
        <description>Used for populating Assignee name returned from Jira for jira tickets.</description>
        <label>Assignee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_NewSiteActivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Site Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_No_of_Tries__c</fullName>
        <defaultValue>1</defaultValue>
        <description>to keep counts of re-tries before its failed</description>
        <label>No of Tries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_WaitForAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wait for Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VM_Count_of_Services__c</fullName>
        <label>Count of Services</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VM_Jeopardy_Raised__c</fullName>
        <label>Jeopardy Last Raised</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VM_MainComponent__c</fullName>
        <label>Main Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VM_Total_Rental_Price__c</fullName>
        <label>Total Rental Price</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csord__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account that governs this Solution.</description>
        <inlineHelpText>The Account that governs this Solution.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Solutions</relationshipLabel>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__External_Identifier2__c</fullName>
        <description>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</inlineHelpText>
        <label>External Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>csord__External_Identifier__c</fullName>
        <description>DEPRECATED. External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</description>
        <externalId>true</externalId>
        <inlineHelpText>DEPRECATED. Use External Identifier2 field instead.</inlineHelpText>
        <label>DEPRECATED External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Identification__c</fullName>
        <description>Identification string for the object, used as the reference from external systems.</description>
        <inlineHelpText>E.g. &quot;spokeServiceAmsterdam&quot; in Hub&amp;Spokes scenario.</inlineHelpText>
        <label>Identification</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Order_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Order Request object which introduced the latest changes to this object.</description>
        <inlineHelpText>Order Request object which introduced the latest changes to this object.</inlineHelpText>
        <label>Order Request</label>
        <referenceTo>csord__Order_Request__c</referenceTo>
        <relationshipLabel>Solutions</relationshipLabel>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Order of this Solution.</description>
        <inlineHelpText>The parent Order of this Solution.</inlineHelpText>
        <label>Order</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>Solutions</relationshipLabel>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Status__c</fullName>
        <description>The status of the Solution in the fulfillment process.</description>
        <inlineHelpText>Used for state transitions.</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Type__c</fullName>
        <description>Solution type</description>
        <inlineHelpText>Solution type</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product configuration that initiated creation of this Solution</description>
        <inlineHelpText>Product configuration that initiated creation of this Solution</inlineHelpText>
        <label>Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Solutions</relationshipLabel>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Solution</label>
    <listViews>
        <fullName>All_Suborders</fullName>
        <columns>NAME</columns>
        <columns>csord__Account__c</columns>
        <columns>LG_AccountName__c</columns>
        <columns>LG_Address__c</columns>
        <columns>LG_TargetDate__c</columns>
        <columns>LG_Jeopardy__c</columns>
        <columns>csord__Order__c</columns>
        <columns>csord__Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>LG_OpportunityName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>csord__Solution__c.Suborder</value>
        </filters>
        <label>All Suborders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Order_Management_Solution</fullName>
        <columns>UM_No_of_Tries__c</columns>
        <columns>NAME</columns>
        <columns>LG_Integration_Status__c</columns>
        <columns>LG_Integration_Description__c</columns>
        <columns>LG_ProvisioningAccountNo__c</columns>
        <columns>LG_ProvisioningWorkOrder__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>csord__Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>Order Management</label>
        <language>en_US</language>
        <queue>Order_Management</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Suborders_Cancelled</fullName>
        <columns>NAME</columns>
        <columns>csord__Account__c</columns>
        <columns>LG_AccountName__c</columns>
        <columns>LG_Address__c</columns>
        <columns>LG_TargetDate__c</columns>
        <columns>LG_Jeopardy__c</columns>
        <columns>csord__Order__c</columns>
        <columns>csord__Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>LG_OpportunityName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>csord__Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>csord__Solution__c.Suborder</value>
        </filters>
        <label>Suborders - Cancelled</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Suborders_Complete</fullName>
        <columns>NAME</columns>
        <columns>csord__Account__c</columns>
        <columns>LG_AccountName__c</columns>
        <columns>LG_Address__c</columns>
        <columns>LG_TargetDate__c</columns>
        <columns>LG_Jeopardy__c</columns>
        <columns>csord__Order__c</columns>
        <columns>csord__Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>LG_OpportunityName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>csord__Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>csord__Solution__c.Suborder</value>
        </filters>
        <label>Suborders - Complete</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Suborders_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>csord__Account__c</columns>
        <columns>LG_AccountName__c</columns>
        <columns>LG_Address__c</columns>
        <columns>LG_TargetDate__c</columns>
        <columns>LG_Jeopardy__c</columns>
        <columns>csord__Order__c</columns>
        <columns>csord__Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>LG_OpportunityName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>csord__Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>csord__Solution__c.Suborder</value>
        </filters>
        <label>Suborders - In Progress</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>csord__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Solution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solutions</pluralLabel>
    <recordTypes>
        <fullName>Quantity</fullName>
        <active>true</active>
        <label>Quantity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Suborder</fullName>
        <active>true</active>
        <description>Used for decomposing order and grouping Services that can be provisioned together</description>
        <label>Suborder</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>